=========================================================================
CHANGE LOG
=========================================================================

2007-05-06  Warren L. DeLano <warren@delsci.com>

	* damage control galore... many new bugs created & quashed.
	
2007-05-05  Warren L. DeLano <warren@delsci.com>

	* created some basic tests cases for use of multiple instances
	
	* support for multiple PyMOL instances now largely complete

2007-05-04  Warren L. DeLano <warren@delsci.com>

	* fixed various GUI annoyances
	
	* fixed scene insert before/after actions

	* fixed mpng command-line action

	* OVERHAULED the Python/C API to reduce global state

	* REFACTORED cmd.py into a number of new .py files

2007-05-03  Warren L. DeLano <warren@delsci.com>

	* converted parser to instance-based while retaining global use
	
	* continued work on PyMOL as a Python object
	
2007-05-01  Warren L. DeLano <warren@delsci.com>

	* threads limit increased to 32 
	
2007-04-30  Warren L. DeLano <warren@delsci.com>

	* starting to reduce global Python state, enable PyMOL objects
	
	* fixed near_to selection operator
	
	* enabled per-state geometric criteria (within, expand, etc.)
	
	* added state and domain options to the select command
	
2007-04-23  Warren L. DeLano <warren@delsci.com>

	* added state=-1 and state=0 options for alter_state
	
2007-04-22  Warren L. DeLano <warren@delsci.com>

	* fixed pdb_unbond_cations for automatic bond detection
	
	* fixed static_singletons for distance objects
	
2007-04-21  Warren L. DeLano <warren@delsci.com>

	* fixed wrapping problems for movies & objects
	
	* fixed "mview reset" for object matrices
	
2007-04-18

	* fixed bug with aligning selections using the menus
	
2007-04-03  Warren L. DeLano <warren@delsci.com>

	* ray option to png
	
2007-04-01  Warren L. DeLano <warren@delsci.com>

	* unsupported surface_types: 4,5 ->5,6; 4 now related to 3
	
	* fixed mouse_wheel_scale bug
	
2007-03-30  Warren L. DeLano <warren@delsci.com>
